# flappy_bird_clone

./: .gitignore  CMakeLists.txt  GameState.cpp  GameState.h  Makefile  Player.cpp  Player.h  README.md  game.cpp  game.h  main.cpp
src/: Entity.cpp  Entity.h  GameState.cpp  GameState.h  Player.cpp  Player.h  game.cpp  game.h  main.cpp
